# natachat

./: README.md  package-lock.json  version
api/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
api/dependency/: index.py
api/libs/: db.py  llm.py
api/models/: index.py
api/router/: auth.py  chat.py  document.py  setting.py  ui.py  ws_chat.py
api/schemas/: models.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
ui/src/: App.tsx  index.css
ui/src/components/: AppSidebar.tsx  Layout.tsx
ui/src/lib/: api.ts  chat.ts  setting.ts  ws.ts
ui/src/pages/: Chat.tsx  Documents.tsx  Login.tsx  Product.tsx  Register.tsx  Settings.tsx  SystemPrompt.tsx  UploadFiles.tsx  UserFeedback.tsx
